; ModuleID = '/home/carl/AnghaBench/h2o/lib/core/extr_proxy.c_detach_client.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/core/extr_proxy.c_detach_client.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }
%struct.rp_generator_t = type { %struct.TYPE_3__* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_3__* (%struct.rp_generator_t*)* @detach_client to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_3__* @detach_client(%struct.rp_generator_t* %0) #0 {
  %2 = alloca %struct.rp_generator_t*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.rp_generator_t* %0, %struct.rp_generator_t** %2, align 8
  %4 = load %struct.rp_generator_t*, %struct.rp_generator_t** %2, align 8
  %5 = getelementptr inbounds %struct.rp_generator_t, %struct.rp_generator_t* %4, i32 0, i32 0
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** %3, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = icmp ne %struct.TYPE_3__* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i32* null, i32** %12, align 8
  %13 = load %struct.rp_generator_t*, %struct.rp_generator_t** %2, align 8
  %14 = getelementptr inbounds %struct.rp_generator_t, %struct.rp_generator_t* %13, i32 0, i32 0
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %14, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  ret %struct.TYPE_3__* %15
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
